src/objects/Adjuster_Survey_Response__c.object
<CustomObject>
    <description>Adjuster survey responses</description>
    <fields>
        <fullName>Adjuster_Survey_Sent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Adjuster Survey Sent</label>
        <referenceTo>Adjuster_Survey_Sent__c</referenceTo>
        <relationshipLabel>Adjuster Survey Responses</relationshipLabel>
        <relationshipName>Adjuster_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anything_else_you_would_like_to_tell_us__c</fullName>
        <label>Anything else you would like to tell us</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Adjuster, Adjuster Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Adjuster Survey Responses</relationshipLabel>
        <relationshipName>Adjuster_Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Survey_Was_Emailed__c</fullName>
        <label>Date Survey Was Emailed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Promotor_Score__c</fullName>
        <label>Net Promotor Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prompt_Call_and_Email_Response__c</fullName>
        <label>Prompt Call and Email Response</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Score__c</fullName>
        <formula>IF( Net_Promotor_Score__c = 10,1, (Net_Promotor_Score__c + Prompt_Call_and_Email_Response__c + Service_Expectations_Met__c + Staff_Knowledgeable_With_Questions__c) /40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GetFeedback Satisfaction Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Expectations_Met__c</fullName>
        <label>Service Expectations Met</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Knowledgeable_With_Questions__c</fullName>
        <label>Staff Knowledgeable With Questions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adjuster Survey Response</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adjuster Survey Responses</pluralLabel>
    <recordTypes>
        <fullName>Survey_1</fullName>
        <active>true</active>
        <description>Adjuster survey #1 responses</description>
        <label>Survey 1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>